added div to first section under h1

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <div class="row align-items-md-center">
         <div class="col-md-6 mb-4 mb-md-0">
           <h1 class="section-heading">Take a closer look</h1>
+          <div class="list" id="songList"></div>
           <p class="my-4">Music has the ability to evoke powerful emotional responses such as chills and thrills in listeners. Positive emotions dominate musical experiences. Pleasurable music may lead to the release of neurotransmitters associated with reward, such as dopamine.
             Listening to music is an easy way to alter mood or relieve stress.</p>
             
