added emojis to dropdown

--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
           <p class="my-4">Music has the ability to evoke powerful emotional responses such as chills and thrills in listeners. Positive emotions dominate musical experiences. Pleasurable music may lead to the release of neurotransmitters associated with reward, such as dopamine.
             Listening to music is an easy way to alter mood or relieve stress.</p>
             
-            <form action="/action_page.php">
+            <form action="/action_page.php"></form>
               <a  class="text-uppercase d-inline-block btn-soft
             light">Choose a mood:</a>
               <select class="text-uppercase d-inline-block btn-soft
               light" name="songMood" id="mood">
-                <option href="#" value="Energetic">Energetic</option>
-                <option href="#" value="Aggressive">Aggressive</option>
-                <option href="#" value="Euphoric">Euphoric</option>
-                <option href="#" value="Majestic">Majestic</option>
+                <option href="#" value="Energetic"><p>&#128512;</p></option>
+                <option href="#" value="Aggressive"><p>&#128520;</p></option>
+                <option href="#" value="Euphoric"><p>&#128557;</p></option>
+                <option href="#" value="Majestic"><p>&#129321;</p></option>
               </select>
               <!-- <br><br> //Possible submit button 
               <input class="text-uppercase d-inline-block btn-soft
