--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--Font Awesome CDN-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css">
   <!--Bootstrap CDN-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <!--My stylesheet-->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -188,6 +188,7 @@
   </footer>
 
   <!-- JS to open the menu on click -->
+  <!-- Added spotify player incase we want to use it, if not delete -->
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="script.js"></script>
