--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Valence</title>
     <!--Font Awesome CDN-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css">
-    <!--Bootstrap CDN-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <!--My stylesheet-->
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 <body>
+  
   <header>
     <div class="container">
       <nav class="nav">
@@ -72,8 +72,8 @@
                 <option value="Majestic">Majestic</option>
               </select> -->
               <br><br>  
-              <button class="text-uppercase d-inline-block btn-soft
-              light" id = 'searchBtn'>
+              <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#exampleModal"
+              id = 'searchBtn'>Search Mood</button>
             </form>
 
           </div>
@@ -82,11 +82,28 @@
         </div>
       </div>
     </div>
-    <div id = "populateListHere">
 
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Top 50 tracks related to your search</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body" id = "populateListHere">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
-
+  
   <section class="sharp-contrast  py-5">
     <div class="container">
       <div class="row align-items-md-center">
@@ -103,7 +120,7 @@
       </div>
     </div>
   </section>
-
+  
   <section class="features  light-bg py-5">
     <div class="container">
       <div class="row">
@@ -174,11 +191,11 @@
 </footer>
 
   <!-- JS to open the menu on click -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  
   <script src = "script.js"></script>
   <script>
-    let openMenu = document.querySelector('.menu-toggler');
-    let navList = document.querySelector('.nav-list');
+    //let openMenu = document.querySelector('.menu-toggler');
+    //let navList = document.querySelector('.nav-list');
 
     //openMenu.addEventListener('click', function () {
     //  navList.classList.toggle('active');
