--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!--Search for song by lyric-->
         
         <div class="col-md-6 mb-4 mb-md-0">
-          <h1 class="section-heading">Searh a song by lyrics</h1>
+          <h1 class="section-heading">Search a song by lyrics</h1>
           <p class="my-4">Use our lovely feature and search one of your favorite songs by just typing in the lyrics</p>
           <a href="#" class="text-uppercase d-inline-block btn-soft
             dark">Search by lyrics</a>
