--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
   </section>
 
   <!-- Kanye Rest -->
-  <div id="Kanyequote">
-    <div id="screen" class="flex-center-full h-100vh w-100 tc-center pointer padding-2 bg-lighpink">
-      <button class="text-uppercase d-inline-block btn-soft light kanyeRest" id='kanyeRestbtn'>Kanye Rest</button>
-      <p class="fs-style padding-0250 fw-bold bg-black fc-white">Kanye West Quotes...</p>
-    </div>
+  <p id="Kanyequote">
+  <div id="screen" class="flex-center-full h-100vh w-100 tc-center pointer padding-2 bg-lighpink">
+    <button class="text-uppercase d-inline-block btn-soft light kanyeRest" id='kanyeRestbtn'>Kanye Rest</button>
+    <p class="fs-style padding-0250 fw-bold bg-black fc-white">Kanye West Quotes...</p>
   </div>
+  </p>
 
 
 
