--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
   </section>
 
   <!-- Kanye Rest -->
+  <h3 style="text-align: center;">Kanye Rest Quotes</h3>
   <p id="Kanyequote" style="text-align: center;">
   <div id="screen" class="flex-center-full h-100vh w-100 tc-center pointer padding-2 bg-lighpink">
     <button class="text-uppercase  btn-soft light " id='kanyeRestbtn'>Kanye Rest</button>
