--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <p id="Kanyequote" style="text-align: center;">
   <div id="screen" class="flex-center-full h-100vh w-100 tc-center pointer padding-2 bg-lighpink">
     <button class="text-uppercase  btn-soft light " id='kanyeRestbtn'>Kanye Rest</button>
-    <p class="fs-style padding-0250 fw-bold bg-black fc-white">Kanye West Quotes...</p>
+    <p class="kanyeWestQuoteLable" style="text-align: center;">Kanye West Quotes...</p>
   </div>
   </p>
 
