--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
     <p class="kanyeWestQuoteLable" style="text-align: center;">Kanye West Quotes...</p>
   </div>
   </p>
+  <!-- End Kanye Rest  -->
 
 
 
