--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
           <form>
             <a class="text-uppercase d-inline-block btn-soft
             light">Choose a mood:</a>
-            <input type="text" id="searchBox">
             <br><br>
-            <!-- Search Button -->
-            <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#exampleModal"
-              id='searchBtn'>Search Mood</button>
+            <!-- Search Buttons -->
+            <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#modal" id='searchSongsBtn'>Search songs by mood</button>
+            <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#modal" id='searchArtistBtn'>Search artists by Mood</button>
+            <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#modal" id='searchAlbumBtn'>Search albums by mood</button>
           </form>
 
         </div>
@@ -180,17 +180,25 @@
     </div>
   </footer>
   <!-- Modal to populate songlist into -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Top 50 tracks related to your search</h5>
+          <h5 class="modal-title" id="modalLabel">Top 50 tracks related to your search</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body" id="populateListHere">
-        </div>
+        <div class="modal-body">
+          <!-- Put all search functions here -->
+          <div>
+            <p id="inputLabel"></p>
+            <input type="text" id="searchBox">
+            </div>
+            <button class="text-uppercase d-inline-block btn-soft light" id='searchBtn'>Search by mood</button>
+          </div>
+          <!-- Search Results go here -->
+          <div id="populateListHere"></div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
