--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="container">
       <nav class="nav">
         <a href="index.html" class="nav-brand">Valence <span>Music</span></a>
-        </div>
-      </nav>
+    </div>
+    </nav>
     </div>
   </header>
 
@@ -61,9 +61,12 @@
             light">Choose a mood:</a>
             <br><br>
             <!-- Search Buttons -->
-            <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#modal" id='searchSongsBtn'>Search songs by mood</button>
-            <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#modal" id='searchArtistBtn'>Search artists by Mood</button>
-            <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#modal" id='searchAlbumBtn'>Search albums by mood</button>
+            <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#modal"
+              id='searchSongsBtn'>Search songs by mood</button>
+            <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#modal"
+              id='searchArtistBtn'>Search artists by Mood</button>
+            <button class="text-uppercase d-inline-block btn-soft light" data-toggle="modal" data-target="#modal"
+              id='searchAlbumBtn'>Search albums by mood</button>
           </form>
 
         </div>
@@ -82,7 +85,8 @@
 
         <div class="col-md-6 text-center">
           <img class="img-fluid d-md-block mr-md-auto"
-            src="https://storage.googleapis.com/afs-prod/media/c7ee6099a9044f57b6502c4b2a6105d7/2763.jpeg" alt="Kanye West">
+            src="https://storage.googleapis.com/afs-prod/media/c7ee6099a9044f57b6502c4b2a6105d7/2763.jpeg"
+            alt="Kanye West">
         </div>
 
         <!--Search for song by lyric-->
@@ -90,8 +94,8 @@
         <div class="col-md-6 mb-4 mb-md-0">
           <h1 class="section-heading">Generate a quote by Yeezus, Himself</h1>
           <p class="my-4">The best of the West needs his word spread to the world</p>
-          <a href="#" class="text-uppercase d-inline-block btn-soft
-            dark">Get Quote</a>
+          <a href="#" class="text-uppercase d-inline-block btn-soft 
+            dark" id="">Get Quote</a>
         </div>
       </div>
     </div>
@@ -158,7 +162,7 @@
   <!-- Kanye Rest -->
   <h3 style="text-align: center;">Kanye Rest Quotes</h3>
   <p id="Kanyequote" style="text-align: center;">
-  <div id="screen" class="flex-center-full h-100vh w-100 tc-center pointer padding-2 bg-lighpink">
+  <div id="screen" class="flex-center-full">
     <button class="text-uppercase  btn-soft light " id='kanyeRestbtn'>Kanye Rest</button>
     <p class="kanyeWestQuoteLable" style="text-align: center;">Kanye West Quotes...</p>
   </div>
@@ -195,11 +199,11 @@
           <div>
             <p id="inputLabel"></p>
             <input type="text" id="searchBox">
-            </div>
-            <button class="text-uppercase d-inline-block btn-soft light" id='searchBtn'>Search by mood</button>
           </div>
-          <!-- Search Results go here -->
-          <div id="populateListHere"></div>
+          <button class="text-uppercase d-inline-block btn-soft light" id='searchBtn'>Search by mood</button>
+        </div>
+        <!-- Search Results go here -->
+        <div id="populateListHere"></div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
