cleaned up problems list

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <h1 class="section-heading">Generate a quote by Yeezus, Himself</h1>
           <p class="my-4">The best of the West needs his word spread to the world</p>
           <a href="#" class="text-uppercase d-inline-block btn-soft 
-            dark" id="">Get Quote</a>
+            dark" id="kanyeButton">Get Quote</a>
         </div>
       </div>
     </div>
